--- a/index.html
+++ b/index.html
@@ -4,108 +4,109 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Malla Curricular IO</title>
-  <link rel="stylesheet" href="estilos.css" />
+  <link rel="stylesheet" href="estilos.css"/>
 </head>
 <body>
-  <h1>Malla Curricular Interactiva - Investigación Operativa</h1>
-  <div class="contenedor">
+  <h1>Malla Curricular - Investigación Operativa</h1>
+  <div class="malla">
 
     <!-- PRIMER CICLO -->
     <div class="ciclo">
       <h2>1° Ciclo</h2>
-      <div class="ramo" data-nombre="Lenguaje">Lenguaje</div>
-      <div class="ramo" data-nombre="Métodos De Estudio Universitario">Métodos De Estudio Universitario</div>
-      <div class="ramo" data-nombre="Gestión Personal">Gestión Personal</div>
-      <div class="ramo" data-nombre="Calculo I">Calculo I</div>
-      <div class="ramo" data-nombre="Matemática Básica">Matemática Básica</div>
-      <div class="ramo" data-nombre="Biología">Biología</div>
+      <div class="ramo" data-nombre="Lenguaje"></div>
+      <div class="ramo" data-nombre="Métodos De Estudio Universitario"></div>
+      <div class="ramo" data-nombre="Gestión Personal"></div>
+      <div class="ramo" data-nombre="Calculo I"></div>
+      <div class="ramo" data-nombre="Matemática Básica"></div>
+      <div class="ramo" data-nombre="Biología"></div>
     </div>
 
     <!-- SEGUNDO CICLO -->
     <div class="ciclo">
       <h2>2° Ciclo</h2>
-      <div class="ramo" data-nombre="Fundamentos de Investigación Científica">Fundamentos de Investigación Científica</div>
-      <div class="ramo" data-nombre="Medio Ambiente y Desarrollo Sostenible" data-requiere="Biología">Medio Ambiente y Desarrollo Sostenible</div>
-      <div class="ramo" data-nombre="Realidad Nacional y Mundial">Realidad Nacional y Mundial</div>
-      <div class="ramo" data-nombre="Calculo II" data-requiere="Calculo I">Calculo II</div>
-      <div class="ramo" data-nombre="Química Inorgánica Y Orgánica">Química Inorgánica Y Orgánica</div>
-      <div class="ramo" data-nombre="Física General">Física General</div>
+      <div class="ramo" data-nombre="Fundamentos de Investigación Científica"></div>
+      <div class="ramo" data-nombre="Medio Ambiente y Desarrollo Sostenible" data-requiere="Biología"></div>
+      <div class="ramo" data-nombre="Realidad Nacional y Mundial"></div>
+      <div class="ramo" data-nombre="Calculo II" data-requiere="Calculo I"></div>
+      <div class="ramo" data-nombre="Química Inorgánica Y Orgánica"></div>
+      <div class="ramo" data-nombre="Física General"></div>
     </div>
 
     <!-- TERCER CICLO -->
     <div class="ciclo">
       <h2>3° Ciclo</h2>
-      <div class="ramo" data-nombre="Estadística y Probabilidad" data-requiere="Matemática Básica, Calculo II">Estadística y Probabilidad</div>
-      <div class="ramo" data-nombre="Economía" data-requiere="Medio Ambiente y Desarrollo Sostenible, Realidad Nacional y Mundial">Economía</div>
-      <div class="ramo" data-nombre="Calculo III" data-requiere="Calculo II">Calculo III</div>
-      <div class="ramo" data-nombre="Algebra Lineal" data-requiere="Matemática Básica">Algebra Lineal</div>
-      <div class="ramo" data-nombre="Modelos Determinísticos en Investigación Operativa I" data-requiere="Calculo I">Modelos Determinísticos en Investigación Operativa I</div>
+      <div class="ramo" data-nombre="Estadística y Probabilidad" data-requiere="Matemática Básica, Calculo II"></div>
+      <div class="ramo" data-nombre="Economía" data-requiere="Medio Ambiente y Desarrollo Sostenible, Realidad Nacional y Mundial"></div>
+      <div class="ramo" data-nombre="Calculo III" data-requiere="Calculo II"></div>
+      <div class="ramo" data-nombre="Algebra Lineal" data-requiere="Matemática Básica"></div>
+      <div class="ramo" data-nombre="Modelos Determinísticos en Investigación Operativa I" data-requiere="Calculo I"></div>
     </div>
 
     <!-- CUARTO CICLO -->
     <div class="ciclo">
       <h2>4° Ciclo</h2>
-      <div class="ramo" data-nombre="Programación de Computadoras" data-requiere="Modelos Determinísticos en Investigación Operativa I">Programación de Computadoras</div>
-      <div class="ramo" data-nombre="IEDO" data-requiere="Algebra Lineal, Calculo III">IEDO</div>
-      <div class="ramo" data-nombre="Inferencia Estadística" data-requiere="Estadística y Probabilidad">Inferencia Estadística</div>
-      <div class="ramo" data-nombre="Programación Lineal y Entera" data-requiere="Algebra Lineal">Programación Lineal y Entera</div>
+      <div class="ramo" data-nombre="Programación de Computadoras" data-requiere="Modelos Determinísticos en Investigación Operativa I"></div>
+      <div class="ramo" data-nombre="IEDO" data-requiere="Calculo III, Algebra Lineal"></div>
+      <div class="ramo" data-nombre="Inferencia Estadística" data-requiere="Estadística y Probabilidad"></div>
+      <div class="ramo" data-nombre="Programación Lineal y Entera" data-requiere="Algebra Lineal"></div>
     </div>
 
     <!-- QUINTO CICLO -->
     <div class="ciclo">
       <h2>5° Ciclo</h2>
-      <div class="ramo" data-nombre="Teoría, Análisis y diseño de sistemas" data-requiere="Modelos Determinísticos en Investigación Operativa I">Teoría, Análisis y diseño de sistemas</div>
-      <div class="ramo" data-nombre="Modelos Determinísticos en Investigación Operativa II" data-requiere="Modelos Determinísticos en Investigación Operativa I, Programación Lineal y Entera">Modelos Determinísticos en Investigación Operativa II</div>
-      <div class="ramo" data-nombre="Matemática Financiera" data-requiere="Economía, Algebra Lineal, Programación Lineal y Entera">Matemática Financiera</div>
-      <div class="ramo" data-nombre="Métodos Numéricos" data-requiere="Calculo II, Algebra Lineal, Programación de Computadoras">Métodos Numéricos</div>
-      <div class="ramo" data-nombre="Practica pre profesional Módulo I" data-requiere="Modelos Determinísticos en Investigación Operativa I, Programación de Computadoras, Programación Lineal y Entera">Practica pre profesional Módulo I</div>
+      <div class="ramo" data-nombre="Teoría, Análisis y diseño de sistemas" data-requiere="Modelos Determinísticos en Investigación Operativa I"></div>
+      <div class="ramo" data-nombre="Modelos Determinísticos en Investigación Operativa II" data-requiere="Modelos Determinísticos en Investigación Operativa I, Programación Lineal y Entera"></div>
+      <div class="ramo" data-nombre="Matemática Financiera" data-requiere="Economía, Algebra Lineal, Programación Lineal y Entera"></div>
+      <div class="ramo" data-nombre="Métodos Numéricos" data-requiere="Programación de Computadoras, Calculo II, Algebra Lineal"></div>
+      <div class="ramo" data-nombre="Practica pre profesional Módulo I" data-requiere="Modelos Determinísticos en Investigación Operativa I, Programación de Computadoras, Programación Lineal y Entera"></div>
     </div>
 
     <!-- SEXTO CICLO -->
     <div class="ciclo">
       <h2>6° Ciclo</h2>
-      <div class="ramo" data-nombre="Modelos Probabilísticos en Investigación Operativa I" data-requiere="Estadística y Probabilidad, Modelos Determinísticos en Investigación Operativa I">Modelos Probabilísticos en Investigación Operativa I</div>
-      <div class="ramo" data-nombre="Procesos Estocásticos" data-requiere="Estadística y Probabilidad, IEDO">Procesos Estocásticos</div>
-      <div class="ramo" data-nombre="Gestión de Sistemas Organizacionales" data-requiere="Teoría, Análisis y diseño de sistemas">Gestión de Sistemas Organizacionales</div>
-      <div class="ramo" data-nombre="Seminario de Investigación I" data-requiere="Modelos Determinísticos en Investigación Operativa II">Seminario de Investigación I</div>
+      <div class="ramo" data-nombre="Modelos Probabilísticos en Investigación Operativa I" data-requiere="Estadística y Probabilidad, Modelos Determinísticos en Investigación Operativa I"></div>
+      <div class="ramo" data-nombre="Procesos Estocásticos" data-requiere="Estadística y Probabilidad, IEDO"></div>
+      <div class="ramo" data-nombre="Gestión de Sistemas Organizacionales" data-requiere="Teoría, Análisis y diseño de sistemas"></div>
+      <div class="ramo" data-nombre="Seminario de Investigación I" data-requiere="Modelos Determinísticos en Investigación Operativa II"></div>
     </div>
 
     <!-- SÉPTIMO CICLO -->
     <div class="ciclo">
       <h2>7° Ciclo</h2>
-      <div class="ramo" data-nombre="Modelos Probabilísticos en Investigación Operativa II" data-requiere="Modelos Probabilísticos en Investigación Operativa I">Modelos Probabilísticos en Investigación Operativa II</div>
-      <div class="ramo" data-nombre="Simulación de sistemas" data-requiere="Inferencia Estadística, Modelos Probabilísticos en Investigación Operativa I, Procesos Estocásticos">Simulación de sistemas</div>
-      <div class="ramo" data-nombre="Teoría de Grafos" data-requiere="Programación Lineal y Entera">Teoría de Grafos</div>
+      <div class="ramo" data-nombre="Modelos Probabilísticos en Investigación Operativa II" data-requiere="Modelos Probabilísticos en Investigación Operativa I"></div>
+      <div class="ramo" data-nombre="Simulación de sistemas" data-requiere="Procesos Estocásticos, Inferencia Estadística, Modelos Probabilísticos en Investigación Operativa I"></div>
+      <div class="ramo" data-nombre="Teoría de Grafos" data-requiere="Programación Lineal y Entera"></div>
     </div>
 
     <!-- OCTAVO CICLO -->
     <div class="ciclo">
       <h2>8° Ciclo</h2>
-      <div class="ramo" data-nombre="Heurística y Metaheurística" data-requiere="Programación de Computadoras, Teoría de Grafos">Heurística y Metaheurística</div>
-      <div class="ramo" data-nombre="Teoría de decisiones" data-requiere="Inferencia Estadística, Matemática Financiera">Teoría de decisiones</div>
-      <div class="ramo" data-nombre="Programación no Lineal y Dinámica" data-requiere="Programación Lineal y Entera, Métodos Numéricos, Calculo III">Programación no Lineal y Dinámica</div>
-      <div class="ramo" data-nombre="Seminario de Investigación II" data-requiere="Seminario de Investigación I">Seminario de Investigación II</div>
-      <div class="ramo" data-nombre="Practica pre profesional Módulo II" data-requiere="Practica pre profesional Módulo I, Teoría de Grafos, Simulación de sistemas, Modelos Probabilísticos en Investigación Operativa II">Practica pre profesional Módulo II</div>
+      <div class="ramo" data-nombre="Heurística y Metaheurística" data-requiere="Programación de Computadoras, Teoría de Grafos"></div>
+      <div class="ramo" data-nombre="Teoría de decisiones" data-requiere="Inferencia Estadística, Matemática Financiera"></div>
+      <div class="ramo" data-nombre="Programación no Lineal y Dinámica" data-requiere="Calculo III, Métodos Numéricos, Programación Lineal y Entera"></div>
+      <div class="ramo" data-nombre="Seminario de Investigación II" data-requiere="Seminario de Investigación I"></div>
+      <div class="ramo" data-nombre="Practica pre profesional Módulo II" data-requiere="Practica pre profesional Módulo I, Simulación de sistemas, Teoría de Grafos, Modelos Probabilísticos en Investigación Operativa II"></div>
     </div>
 
     <!-- NOVENO CICLO -->
     <div class="ciclo">
       <h2>9° Ciclo</h2>
-      <div class="ramo" data-nombre="Modelos Econométricos" data-requiere="Economía, Inferencia Estadística, Matemática Financiera">Modelos Econométricos</div>
-      <div class="ramo" data-nombre="Seminario de Tesis de Investigación Operativa I" data-requiere="Simulación de sistemas, Teoría de decisiones, Programación no Lineal y Dinámica, Seminario de Investigación II">Seminario de Tesis de Investigación Operativa I</div>
-      <div class="ramo" data-nombre="Estudio de caso en Investigación Operativa" data-requiere="Simulación de sistemas, Teoría de decisiones, Heurística y Metaheurística, Teoría de Grafos, Programación no Lineal y Dinámica">Estudio de caso en Investigación Operativa</div>
-      <div class="ramo" data-nombre="Formulación y Gestión de Proyectos" data-requiere="Gestión de Sistemas Organizacionales, Matemática Financiera">Formulación y Gestión de Proyectos</div>
+      <div class="ramo" data-nombre="Modelos Econométricos" data-requiere="Economía, Inferencia Estadística, Matemática Financiera"></div>
+      <div class="ramo" data-nombre="Seminario de Tesis de Investigación Operativa I" data-requiere="Seminario de Investigación II, Teoría de decisiones, Programación no Lineal y Dinámica, Simulación de sistemas, Teoría de Grafos"></div>
+      <div class="ramo" data-nombre="Estudio de caso en Investigación Operativa" data-requiere="Teoría de decisiones, Heurística y Metaheurística, Simulación de sistemas, Programación no Lineal y Dinámica"></div>
+      <div class="ramo" data-nombre="Formulación y Gestión de Proyectos" data-requiere="Gestión de Sistemas Organizacionales, Matemática Financiera"></div>
     </div>
 
     <!-- DÉCIMO CICLO -->
     <div class="ciclo">
       <h2>10° Ciclo</h2>
-      <div class="ramo" data-nombre="Series cronológicas" data-requiere="Modelos Econométricos">Series cronológicas</div>
-      <div class="ramo" data-nombre="Seminario de Tesis de Investigación Operativa II" data-requiere="Seminario de Tesis de Investigación Operativa I">Seminario de Tesis de Investigación Operativa II</div>
-      <div class="ramo" data-nombre="Practica pre profesional Módulo III" data-requiere="Practica pre profesional Módulo II">Practica pre profesional Módulo III</div>
+      <div class="ramo" data-nombre="Series cronológicas" data-requiere="Modelos Econométricos"></div>
+      <div class="ramo" data-nombre="Seminario de Tesis de Investigación Operativa II" data-requiere="Seminario de Tesis de Investigación Operativa I"></div>
+      <div class="ramo" data-nombre="Practica pre profesional Módulo III" data-requiere="Practica pre profesional Módulo II"></div>
     </div>
 
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
