--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- QUINTO CICLO -->
     <div class="ciclo">
       <h2>5° Ciclo</h2>
-      <div class="ramo" data-nombre="Teoría, Análisis y diseño de sistemas" data-requiere="Modelos Determinísticos en Investigación Operativa I"></div>
+      <div class="ramo" data-nombre="Teoría Análisis y diseño de sistemas" data-requiere="Modelos Determinísticos en Investigación Operativa I"></div>
       <div class="ramo" data-nombre="Modelos Determinísticos en Investigación Operativa II" data-requiere="Modelos Determinísticos en Investigación Operativa I, Programación Lineal y Entera"></div>
       <div class="ramo" data-nombre="Matemática Financiera" data-requiere="Economía, Algebra Lineal, Programación Lineal y Entera"></div>
       <div class="ramo" data-nombre="Métodos Numéricos" data-requiere="Programación de Computadoras, Calculo II, Algebra Lineal"></div>
@@ -66,7 +66,7 @@
       <h2>6° Ciclo</h2>
       <div class="ramo" data-nombre="Modelos Probabilísticos en Investigación Operativa I" data-requiere="Estadística y Probabilidad, Modelos Determinísticos en Investigación Operativa I"></div>
       <div class="ramo" data-nombre="Procesos Estocásticos" data-requiere="Estadística y Probabilidad, IEDO"></div>
-      <div class="ramo" data-nombre="Gestión de Sistemas Organizacionales" data-requiere="Teoría, Análisis y diseño de sistemas"></div>
+      <div class="ramo" data-nombre="Gestión de Sistemas Organizacionales" data-requiere="Teoría Análisis y diseño de sistemas"></div>
       <div class="ramo" data-nombre="Seminario de Investigación I" data-requiere="Modelos Determinísticos en Investigación Operativa II"></div>
     </div>
 
