--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="estilos.css"/>
 </head>
 <body>
-  <h1>Malla Curricular - Investigación Operativa</h1>
+  <h1>Malla Curricular de mi novia ♡ </h1>
   <div class="malla">
 
     <!-- PRIMER CICLO -->
